@@ -1,3 +1,4 @@
+// Package: student.model.Car
 package student.model.Car;
 
 import java.math.BigDecimal;
@@ -6,38 +7,26 @@ import java.util.List;
 import java.util.Locale;
 import java.util.stream.Collectors;
 
-/**
- * Service class for car-related operations.
- * Provides methods to retrieve and manage car data.
- */
 public class CarService {
 
     private final CarRepository carRepository;
 
-    /**
-     * Constructs a new CarService with the specified repository.
-     *
-     * @param carRepository The repository to use for car data access
-     */
     public CarService(CarRepository carRepository) {
         this.carRepository = carRepository;
     }
 
     /**
-     * Retrieves all cars in the system.
-     *
-     * @return A list containing all cars
+     * Get all cars in the system.
      */
     public List<Car> getAllCars() {
         return carRepository.getAllCars();
     }
 
     /**
-     * Retrieves a specific car by its registration number.
-     *
-     * @param regNumber The registration number of the car to retrieve
-     * @return The car with the specified registration number
-     * @throws IllegalStateException if no car with the given registration number is found
+     * Get a specific car by its registration number.
+     * @param regNumber The registration number of the car.
+     * @return The car with the given regNumber.
+     * @throws IllegalStateException if not found.
      */
     public Car getCar(String regNumber) {
         return getAllCars().stream()
@@ -48,9 +37,7 @@ public class CarService {
     }
 
     /**
-     * Retrieves all electric cars in the system.
-     *
-     * @return A list containing all electric cars
+     * Get all electric cars in the system.
      */
     public List<Car> getAllElectricCars() {
         return getAllCars().stream()
@@ -59,9 +46,7 @@ public class CarService {
     }
 
     /**
-     * Sorts all cars by their rental price per day in ascending order.
-     *
-     * @return A list of cars sorted by rental price per day
+     * Sort all cars by rental price in ascending order.
      */
     public List<Car> sortCarsByPrice() {
         return getAllCars().stream()
@@ -70,11 +55,7 @@ public class CarService {
     }
 
     /**
-     * Retrieves cars whose rental price per day falls within a specified range.
-     *
-     * @param min The minimum rental price (inclusive)
-     * @param max The maximum rental price (inclusive)
-     * @return A list of cars within the specified price range
+     * Filter cars within a specified price range.
      */
     public List<Car> getCarsByPriceRange(BigDecimal min, BigDecimal max) {
         return getAllCars().stream()
@@ -86,23 +67,14 @@ public class CarService {
     }
 
     /**
-     * Searches for cars based on a keyword. The search matches against:
-     * - registration number
-     * - brand name
-     * - the word "electric" for electric cars
-     *
-     * @param keyword The keyword to search for
-     * @return A list of cars matching the keyword
+     * Search cars by keyword matching brand, registration number, or 'electric'.
      */
     public List<Car> searchCars(String keyword) {
-        String lowerKeyword = keyword.toLowerCase(Locale.ROOT);
-        return getAllCars().stream()
-                .filter(car ->
-                        car.getRegNumber().toLowerCase().contains(lowerKeyword) ||
-                                car.getBrand().name().toLowerCase().contains(lowerKeyword) ||
-                                (car.isElectric() && lowerKeyword.contains("electric"))
-                )
-                .collect(Collectors.toList());
+        return carRepository.getAllCars().stream()
+                .filter(car -> car.getBrand().name().toLowerCase().contains(keyword)
+                        || car.getRegNumber().toLowerCase().contains(keyword)
+                        || car.getModel().toLowerCase().contains(keyword))
+                .toList();
     }
 
 }
